# flaskdir

./: .drone.yml  Dockerfile  LICENSE  README.md  pyproject.toml
appname/: __init__.py
appname/routes/: index.py  middleware.py
appname/routes/name/: middleware.py
appname/routes/name/<name>/: index.py
appname/static/: test.txt
routes/name/: middleware.py
test/: test_sample.py
