[tool.poetry]
name = "appname"
version = "0.1.1"
description = "A simple dir-based adaptation of flask"
authors = ["pasc4le"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
importlib = "^1.0.4"
Flask = "^2.2.2"
waitress = "^2.1.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
requests = "^2.28.1"
faker = "^15.3.4"

[tool.poetry.scripts]
dev = "appname:dev"
serve = "appname:prod"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
